Change id to class on 3rd element in index. Edit 3rd element in style

--- a/foundations/class-id-selectors-me/style.css
+++ b/foundations/class-id-selectors-me/style.css
@@ -1,9 +1,9 @@
 .odd-number-element { /* for odd number elements */
     background-color:rgb(255,182,193); /* light/red pink */
-    font-family: "Verdana", "DejaVu Sans", sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-.odd-number-element#third-element {
+.third-element {
     font-size: 24px; /* in addition to the styles for all odd numbered elements */
 }
 
