--- a/margin-and-padding/me-margin-and-padding-1/style.css
+++ b/margin-and-padding/me-margin-and-padding-1/style.css
@@ -24,5 +24,5 @@ body {
     width: 200px;
     /* change me */
     padding: 30px;
-    margin-left: 333px;
+    margin-left: 333px; /* solution uses auto instead of px. margin-left: auto */
 }
