--- a/flex/me-02-flex-header/style.css
+++ b/flex/me-02-flex-header/style.css
@@ -7,7 +7,7 @@
 }
 
 .left-links li {    
-    
+    /* read again to make the left and right links horizontal and evenly spaced */
    }
 
 .logo {
