--- a/flex/me-02-flex-header/style.css
+++ b/flex/me-02-flex-header/style.css
@@ -1,16 +1,25 @@
-.header {
+.header {  /* outer most flex container */
     font-family: monospace;
     background: papayawhip;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: center;  /* centers things vertically */
+    justify-content: space-between; /* li and logo spaced out far from each other */
 }
 
-.left-links li {    
-    /* read again to make the left and right links horizontal and evenly spaced */
+.left-links ul { /* an inner flex container with it's own flex items, the li */
+    display: flex;
+    column-gap: 15px;
    }
 
-.logo {
+.left-links li { /* the flex items of the inner flex container ul */
+    flex: auto; 
+    /* If you wanted to respect the size property of my navigation items but have the available space shared
+     out equally among them, then you might use flex: auto, which is the shorthand for flex: 1 1 auto — all items grow 
+     and shrink from a flex-basis of auto. This would mean that the longer item would have more space because it started
+      from a larger size, even though the same amount of available space is assigned to it as the others.  */
+}
+
+.logo { 
     font-size: 48px;
     font-weight: 900;
     color: tomato;
@@ -18,11 +27,14 @@
     padding: 4px 32px;
 }
 
-.right-links li {
-    
+.right-links ul { /* an inner flex container with it's own flex items, the li */
+    display: flex;
+    column-gap: 15px;
 }
 
-
+.right-links li { /* the flex items of the inner flex container ul */
+    flex: auto;
+}
 
 ul { /* removes the bullet points */
     list-style-type: none;
