--- a/flex/me-04-flex-information/style.css
+++ b/flex/me-04-flex-information/style.css
@@ -1,4 +1,6 @@
-body {
+/* your css doesn't match the solution exactly but it seems to work since it matches the desired outcome */
+
+body {  
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -7,26 +9,30 @@ img {
     height: 100px;
 }
 
-.title {
+.title {  /* title is its own container with one flex item. */
     font-size: 36px;
     font-weight: 900;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 32px;
+    margin-bottom: 32px;  /* this matches solution */
 }
 
-.container {
-    display: flex;
+.container { /* container it its own container with 4 flex items. each item is card. */
+    display: flex;  /* this whole section matches the solution */
     justify-content: center;
     column-gap: 52px;
 }
 
-.card {
+.card { /* each card container has 2 flex items and they are in a column direction */
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 200px;
-    text-align: center;
+    text-align: center; /* solution has this in the body {declaration} above */
+    
+    /* the solution names this part as .info and has less properties. the solution only has the 
+    max-width and none of the other properties. instead of the text-align here, it put the text-align
+    at the body part */
 }
 
