--- a/flex/me-05-flex-modal/style.css
+++ b/flex/me-05-flex-modal/style.css
@@ -20,6 +20,12 @@ body {
     width: 480px;
     border-radius: 10px;
     box-shadow: 2px 4px 16px rgba(0,0,0,0.2);
+    display: flex;
+}
+
+.modal-1 {
+    display: flex;
+    flex: auto;
 }
 
 .icon {
@@ -48,6 +54,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.modal-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-3 {
+    display: flex;
 }
 
 button {
