Edit style - turn in hw - before review sol'n

--- a/flex/me-07-flex-layout-2/style.css
+++ b/flex/me-07-flex-layout-2/style.css
@@ -8,12 +8,20 @@ body {
     height: 72px;
     background: darkmagenta;
     color: white;
+    font-size: 32px;
+    font-weight: 900;
+    padding-left: 16px;
+    display: flex;
+    align-items: center;
 }
 
 .footer {
     height: 72px;
     background: #eee;
     color: darkmagenta;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .content {
@@ -23,7 +31,7 @@ body {
 .sidebar {
     width: 300px;
     background: royalblue;
-    flex: none;
+    flex: none; /* this keeps the width fixed */
     align-items: flex-start;
     padding: 16px;
 }
